# net.forestany.mediacollection

./: README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: JSONMediaCollection.json  JSONMediaCollectionRecord.json  JSONMediaCollectionSmall.json  TMDBMovieDetailsCreditsSchema.json  TMDBMovieSearchSchema.json  TMDBSeriesDetailsCreditsSchema.json  TMDBSeriesSearchSchema.json  adi-registration.properties
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/drawable/: badge_background.xml  bg_checkbox_radio.xml  bg_search_edittext_toolbar.xml  ic_add_floating.xml  ic_api_search.xml  ic_arrow_circle_down.xml  ic_arrow_circle_up.xml  ic_danger.xml  ic_dropdown_menu.xml  ic_filter.xml  ic_last_seen.xml  ic_lock_reset.xml  ic_random.xml  ic_restore.xml  ic_save.xml  ic_sort.xml  ic_statistic.xml  ic_sync.xml  ic_sync_lock.xml
app/src/main/res/layout/: activity_item_view.xml  activity_main.xml  bottom_sheet_dialog_filter.xml  bottom_sheet_dialog_filter_item.xml  bottom_sheet_dialog_media_item.xml  bottom_sheet_dialog_media_items.xml  bottom_sheet_dialog_sort.xml  bottom_sheet_dialog_sort_item.xml  fragment_details.xml  fragment_general.xml  fragment_other.xml  fragment_poster.xml  item_dropdown.xml  main_item.xml  menu_item_filter.xml  menu_item_sort.xml  settings_activity.xml
app/src/main/res/menu/: item_menu.xml  (+2 more)
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  short_description.txt.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+65 files in other folders)
